# Clarus-Equation

./: .cursorrules  .gitignore  01_SFE_개요와_기본개념.md  02_SFE_수학적_기초.md  03_SFE_핵심_방정식과_유도.md  04_SFE_실험적_검증.md  05_SFE_우주론적_응용.md  06_SFE_이론_총괄_및_핵심_결과.md  07_SFE_추가_난제_검증.md  08_SFE_종합_검증_및_결론.md  09_SFE_암흑물질_확장_및_검증.md  14_SFE_실험설계_및_검증프로토콜.md  17_SFE_트래커_포텐셜_수치_프로토타입.md  README.md  SFE.py  SFE_NIF_validation.py  SFE_clustering_reason.py  SFE_comprehensive_evaluation.ipynb  SFE_conflict_check.py  SFE_no_DM_proof.py  SFE_verification.py  SFE_verification_deductive.py  _fix_readme.py  flavor_scan.py  init.sh  pyproject.toml  read_doc.py  부록_주요_관측_및_실험_데이터.md
Part10_SFE_유도_및_응용/: 00_Intro.md  06_Master_Action_Universal_Derivation.md
Part1_이론기초/: 02_SFE_수학적_기초.md  03_SFE_핵심_방정식과_유도.md  1.1_SFE_개요와_기본개념.md  1.2_SFE_수학적_기초.md  1.3_SFE_핵심_방정식과_유도.md
Part2_핵심검증/: 04_SFE_실험적_검증.md  05_SFE_우주론적_응용.md  06_SFE_이론_총괄_및_핵심_결과.md  07_SFE_추가_난제_검증.md  08_SFE_종합_검증_및_결론.md  09_SFE_이론적_결손_요소_및_연구_로드맵.md  2.2_SFE_우주론적_응용.md  2.3_SFE_이론_총괄_및_핵심_결과.md  2.4_SFE_종합_검증_및_결론.md  2.5_SFE_억압보손_연구.md  2.6_SFE_현상론적_역검증_및_확장_제안.md  2.7_SFE_NIF_점화_재해석.md
Part3_확장이론/: 3.1_SFE_억압보손_유도_및_정합성_증명.md  3.2_SFE_다중상수_정식화_및_검증.md  3.3_SFE_다중상수_수학적_세부_유도.md  3.4_SFE_뮤온_g-2_해결.md  3.5_SFE_양성자_반경_퍼즐_해결.md  3.6_SFE_초기은하_형성_해결.md  3.7_SFE_양자_난제_적용_및_예측.md
Part4_방법론/: 4.1_SFE_통계추론_및_모델비교.md  4.3_SFE_진공보호_및_epsilon_유도_시도.md
Part5_고급주제/: 18_SFE_억압장_상호작용_해석_및_암흑에너지_대체.md  20B_SFE_우주론_검증.md  5.10_SFE_우주상수_제1원리_유도.md  5.12_SFE_우주론_난제_해결.md  5.2_SFE_알파_순환성_해명.md  Chapter20D_SFE_우주론_난제_해결.md  Chapter20E_SFE_암흑물질_대체_VSL.md  Chapter20F_SFE_광속_도로비유.md  Chapter20G_SFE_광자_유효질량.md  Chapter20H_SFE_물질의_기원.md  README.md
Part6_공학응용/: 25_SFE_공학응용_및_기술로드맵.md  26_SFE_일반식_확장_및_다중스케일_커널.md  README.md
Part6_중력통합/: 기존_관측데이터_검증.md  끈이론_SFE_결합_분석.md  통일장이론_근접도_분석.md
Part7_신규섹터/: 27_SFE_신규_다크섹터_및_연구전략.md  28_SFE_cold_DM_섹터_X_상세_및_우주론_제약.md  29_SFE_뮤온_다크섹터_Z프라임_및_g-2_검증.md  30_SFE_고차원_및_끈이론_연계_스케치.md  README.md
Part7_양자컴퓨팅/: 7.2_SFE_양자오류정정_결합.md  7.7_억압장_미시거동_연속스펙트럼.md
Part8_통합이론/: 8.10_SFE_최종_통합_및_완성도_평가.md  8.1_SFE_Reality_Stone_통합_개요.md  8.2_SFE_형식적_수학_모델과_증명.md  8.3_중력과_억압장의_이중_레이어.md  8.4_SFE_공학적_응용_공명핵융합.md  8.4_양자컴퓨팅의_한계와_SCQE.md  8.5_우주론적_함의와_0.37_법칙.md  8.6_SFE_수치검증_및_오차분석.md  8.9_temp_md_정합성_최종_검증.md  README.md
Part9_시스템공학/: 9.3_위상공간_기반_AI_구조.md  9.6_실험적_근거_및_수학적_증명.md
ce_core/: Cargo.toml
ce_core/src/: lib.rs  main.rs
ce_core/src/controller/: mod.rs
ce_core/src/engine/: constants.rs  core.rs  geometric.rs  manifold.rs  market.rs  mod.rs  optimizer.rs
clarus/: __init__.py  _rust.pyd  agent.py  bitfield.py  ce_euler.py  ce_ffn.py  ce_laplacian.py  ce_mra.py  ce_ops.py  ce_riemann_attn.py  ce_softmax.py  ce_zeta.py  clarus_lm_runtime.py  constants.py  convert.py  daemon.py  device.py  engine.py  engine_results.json  hopfield.py  hopfield_results.json  neuromod.py  ops.py  quantum.py  runtime.py  sleep.py  sleep_results.json  sparsity.py  state.py  stdp.py  text_intent.py  text_lexical.py  text_topology.py  utils.py
clarus/core/: Cargo.toml
clarus/core/src/: lib.rs  main.rs
clarus/core/src/cuda/: ce_riemann.cu  mod.rs
clarus/core/src/engine/: arc.rs  benchmark.rs  brain.rs  ce_riemann.rs  config.rs  field.rs  kernel.rs  manifold.rs  mod.rs  nn_ops.rs  noise.rs  optimizer_v2.rs  qec.rs  runtime_types.rs  suppression_filter.rs  suppresson.rs  suppresson_physics.rs
data/: fusion_real_data_proxy.csv
docs/: README.md  SFE_Axioms.md  SFE_공학응용_및_시스템설계.md  SFE_이론평가_및_발전방안.md  SFE_해설.md  axium.md  quant_strategies.md  경로적분.md  상수.md
examples/: epsilon_e_inverse_verification.py  fetch_ibm_results.py  ibm_env.py  ibm_platform_connect.py  ibm_save_and_connect.py  sfe_real_hardware_bridge.py  sfe_verification_long.py
info/: about.json  hash_input.json  index.json  paths.json
quant/: Cargo.toml  fetch_data.py
scripts/: ablation_sleep_cycle.py  bench_clarus_lm.py  bench_gates.py  branch_split.py  build_artifact.py  continual_test.py  create_domain_branches.sh  distill_decoder.py  make_branches.py  natural_dynamics.py  prune_vocab.py  sim_brain_validation.py  sleep_finetune_lm.py  sync_core.sh  test_bootstrap_dynamics.py  test_pure_bootstrap.py  train_ce3.py  train_ce3_v2.py
sfe/: __init__.py  quantum.py
sfe_core/: Cargo.toml  arc_10k.csv  arc_improved.csv  arc_result.csv  geometric_output.csv  scqe_result.csv  sfe_arc_accel.csv  sfe_arc_accel2.csv  sfe_arc_delta.csv  sfe_arc_diag.csv  sfe_arc_qfix.csv  sfe_arc_qfix2.csv  sfe_arc_result.csv  sfe_arc_sweep.csv  sfe_arc_sweep2.csv  suppresson_scan_results.csv
sfe_core/src/: lib.rs  main.rs
sfe_core/src/controller/: mod.rs
sfe_core/src/engine/: arc.rs  benchmark.rs  config.rs  constants.rs  core.rs  filter.rs  geometric.rs  ibm_api.rs  manifold.rs  market.rs  mod.rs  nn_ops.rs  noise.rs  noise_multi.rs  optimizer.rs  optimizer_v2.rs  qec.rs  suppression_filter.rs  suppresson.rs  suppresson_physics.rs
tests/: bench_gpt2.py  test_agent.py  test_architecture.py  test_bridge_gates.py  test_ce_backend.py  test_ce_softmax_sdpa.py  test_clarus_lm_euler_runtime.py  test_consciousness.py  test_mra.py  (+27 more)
viewer/: Cargo.toml
viewer/src/: camera.rs  gltf_loader.rs  lib.rs  mesh.rs  scene.rs  shaders.rs  uniforms.rs
(+541 files in other folders)
