[project]
name = "clarus-equation"
version = "1.1.0"
description = "CE Field Theory -- Rust-backed Brain/AGI Engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
science = [
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "seaborn>=0.13",
    "joblib>=1.3",
]
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
    "qiskit-ibm-runtime>=0.20",
]
neuro = ["nibabel>=5.4"]
dev = ["pytest>=7.0", "ruff>=0.4"]
all = [
    "clarus-equation[science,quantum,neuro,dev]",
]

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "sfe_core/Cargo.toml"
python-source = "."
module-name = "clarus._rust"
features = ["python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
