[package]
name = "ce_core"
version = "1.1.0"
edition = "2021"
authors = ["CE Research Lab"]
description = "Legacy CE field integrator shim -- canonical compute surface is clarus/core"

[lib]
name = "ce_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py38"], optional = true }
ndarray = "0.15"
rayon = "1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
