[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "24"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "Performance",
    "KeyboardEvent", "MouseEvent", "WheelEvent", "PointerEvent",
    "Element", "DomRect"
] }
js-sys = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
gltf = "1.4"
base64 = "0.22"


