[package]
name = "clarus_core"
version = "1.1.0"
edition = "2021"
authors = ["CE Research Lab"]
description = "Canonical Clarus compute core for Rust/Python runtime kernels"

[lib]
name = "_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.20", optional = true }
ndarray = "0.15"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
